# PQTI

./: .gitignore  .mcp.json  CLAUDE.md  MODULE_SIZE_REPORT.md  PQTI_BUG_REPORT.md  QUICKSTART.md  README.md  STATUS.md  TECH_SPEC.md  pyproject.toml
Product/: ADDING_PQTI_TO_FLET_APPS.md  INDEX.md  PRODUCT_DESCRIPTION.md  PYQT6_QUICK_START.md
docs/: ADAPTER_GUIDE.md  FLET_ADAPTER_PLAN.md
examples/: simple_app.py
mcp_server/: __init__.py  app_controller.py  qt_client.py  server.py
mcp_server/adapters/: __init__.py  base.py
mcp_server/adapters/flet/: __init__.py  adapter.py  transport.py
mcp_server/adapters/pyqt6/: __init__.py  adapter.py  transport.py
protocol/: schema.json  specification.md
qt_instrument/: __init__.py  core.py
tests/: test_integration.py
